<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".lab3.ListViewAdvanceActivity"
        android:padding="16dp"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/product_management"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TableRow>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_id"/>
            <EditText
                    android:id="@+id/et_product_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"/>
            <EditText
                    android:id="@+id/et_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/product_type"/>
            <RadioGroup
                    android:id="@+id/rg_product_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                <RadioButton
                        android:id="@+id/rb_book"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/product_type_book"/>
                <RadioButton
                        android:id="@+id/rb_newspaper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_type_newspaper"/>
                <RadioButton
                        android:id="@+id/rb_pen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_type_pen"/>
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <Button
            android:id="@+id/bt_add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableStart="@android:drawable/ic_input_add"
            android:text="@string/add"/>

    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:text="@string/product_admin"/>
        <Button
                android:id="@+id/bt_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_alignParentEnd="true"
                android:drawableStart="@android:drawable/ic_delete"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rc_product_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>


</LinearLayout>