<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        tools:context=".lab2.EmployeeActivity">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TableRow>
            <TextView
                    android:id="@+id/tv_employee_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/employee_id"/>

            <EditText
                    android:id="@+id/et_employee_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:id="@+id/tv_employee_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/employee_name"/>

            <EditText
                    android:id="@+id/et_employee_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:id="@+id/tv_working_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/working_day"/>

            <EditText
                    android:id="@+id/et_working_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/employee_id"/>

            <RadioGroup
                    android:id="@+id/rg_working_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <RadioButton
                        android:id="@+id/rb_part_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/part_time"/>
                <RadioButton
                        android:id="@+id/rb_full_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_time"/>
            </RadioGroup>
        </TableRow>
        <TableRow>
            <Button
                    android:id="@+id/bt_add_employee"
                    android:text="@string/add_employee"/>
        </TableRow>
    </TableLayout>

    <ListView
            android:id="@+id/lv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    </ListView>
</LinearLayout>